<resources>
    <string name="app_name">WBInternW8Part2</string>
    <string name="about_app">О приложении</string>
    <string name="accept">Понятно</string>
    <string name="git_hub_link">https://github.com/pankovkirill</string>
    <string name="_17_06_2022">Дата создания: 17.06.2022</string>
    <string name="github">"GitHub: "</string>
    <string name="author_name">Имя автора: Кирилл Панков</string>

    <string name="intelligence">intelligence</string>
    <string name="speed">speed</string>
    <string name="power">power</string>
    <string name="combat">combat</string>
    <string name="durability">durability</string>
    <string name="strength">strength</string>
</resources>